refactor(系统设置): 插件加载重构